--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
 
 
     <script>
-      //Your web app's Firebase configuration
-      
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyAF76gibowMf9ChDFMxkRFznkct1WCjvGY",
+        authDomain: "car-racing-game-8a0da.firebaseapp.com",
+        databaseURL: "https://car-racing-game-8a0da.firebaseio.com",
+        projectId: "car-racing-game-8a0da",
+        storageBucket: "car-racing-game-8a0da.appspot.com",
+        messagingSenderId: "167768258163",
+        appId: "1:167768258163:web:0eebc9a018b1a81b74dc06"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
     </script>
 
     <script src="js/Player.js"></script>
